[tool.poetry]
name = "gpu_test"
version = "0.1.0"
description = ""
authors = ["Charbel Abi Hana <charbel-a-h@outlook.com>"]

[tool.poetry.dependencies]
python = "3.9.14"
tensorflow-gpu = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
